@@ -30,7 +30,8 @@ APACHECTL = apachectl
 INCLUDES = -I /usr/include/libxml2
 #DEFS = -DWITH_LIBXML2
 #DEFS = -DWITH_LIBXML2 -DDEBUG_CONF
-DEFS = -DWITH_LIBXML2 -DCACHE_DEBUG
+#DEFS = -DWITH_LIBXML2 -DCACHE_DEBUG
+DEFS = -DWITH_LIBXML2 -DNO_MODSEC_API
 #LIBS = -Lmy/lib/dir -lmylib
 
 CFLAGS = -O2 -g -Wuninitialized -Wall -Wmissing-prototypes -Wshadow -Wunused-variable -Wunused-value -Wchar-subscripts -Wsign-compare
