@@ -18,6 +18,7 @@
 #include <apr_optional.h>
 
 
+#ifdef NO_MODSEC_API
 /* Optional functions. */
 
 APR_DECLARE_OPTIONAL_FN(void, modsec_register_tfn, (const char *name, void *fn));
@@ -27,6 +28,7 @@ APR_DECLARE_OPTIONAL_FN(void, modsec_register_variable,
      unsigned int argc_min, unsigned int argc_max,
      void *fn_validate, void *fn_generate,
      unsigned int is_cacheable, unsigned int availability));
+#endif
 
 
 /* Configuration functions. */
